ya hice mi tarea ;)

--- a/16/index.html
+++ b/16/index.html
@@ -7,8 +7,7 @@
 	<link rel="stylesheet" href="">
 </head>
 <body>
-	<img src="images/logo.png">
-   	<a href="http://www.google.cl"> hola </a>
-	</img>
+	<h1>Hola</h1>
+   	<a href="http://www.google.cl"><img src="../images/logo.png"></a>
 </body>
 </html>
