--- a/01/index.html
+++ b/01/index.html
@@ -1,1 +1,10 @@
-<p> <span> hola </p> </span>
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <meta charset="utf-8">
+    <title>Ejercicio 1</title>
+  </head>
+  <body>
+    <p><span>  hola  </span></p>
+  </body>
+</html>
