--- a/02/index.html
+++ b/02/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-<body>
-    <title></title>
-</body>
-<head>
-
-
-</head>
+    <head>
+      <title>Ejercicio 2</title>
+    </head>
+    <body>
+      <p> hola ! </p>
+    </body>
 </html>
