--- a/09/index.html
+++ b/09/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title></title>
+	<title>Ejercicio 9</title>
 	<link rel="stylesheet" href="">
 </head>
 <body>
 
-	<a href="Soy un link"> www.google.cl </a>
+	<a href="https://www.google.cl"> Soy un link </a>
 
 </body>
 </html>
