--- a/18/index.html
+++ b/18/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title> 2 errores </title>
 </head>
-<body>
-    <p style="calor:red background-color:black"> ¿Los encontraste? </p>
+<body bgcolor="black">
+    <p style="color:red" > ¿Los encontraste? </p>
 </body>
 </html>
