--- a/20/index.html
+++ b/20/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <head> Go Green </head>
+    Go Green
+    <style>
+
+      p{color:green;
+      } 
+    </style>
+
 </head>
 <body>
     <p> Hellowww </p>
